--- a/facebook.css
+++ b/facebook.css
@@ -1,20 +1,46 @@
 .header{
     background:#3b5998;
     width:100%;
-    height:85px;g
+    height:85px;
 }
 body{
     margin:0;
+    font-family:Helvetica Neue, Helvetica,Arial,sans-serif;
 }
-.log{
-    width:50%
+.logo{
+    width:50%;
+    padding-top: 32px;
+    float: left;
 }
 .login{
-     width:50%
+     width:50%;
+     float:left;
+     padding-top:10px;
 }
 .logo-text{
     color: #fff;
-    font-size: 25px;
+    font-size: 35px;
     font-weight: bold;
     text-decoration: none;
+    font-family:Helvetica Neue, Helvetica,Arial,sans-serif;
+    margin-left: 170px;
+}
+.login-label{
+    color:#fff;
+    font-size: 11px;   
+}
+.login-controls{
+    margin-left:115px;
+}
+.forgotten{
+    color:#fff;
+    font-size: 11px;
+    text-decoration: none;
+    color:#9cb4d8;
+}
+.Submit-button{
+    background-color:#4267b2;
+    color:#fff;
+    height:20px;
+    border-color:#29487d
 }
